tests/module_use_strict/module_use_strict.exp
Error -------------------------------------------------------------- test.js:3:2

Error: test.js:3
  3: (01: number);
      ^^ Octal literals are not allowed in strict mode.


Found 1 error
